@@ -1,3 +1,11 @@
+2004-04-11  Miles Bader  <miles@gnu.org>
+
+	* emacs-lisp/byte-lexbind.el (byte-compile-make-lvarinfo): Don't
+	use backquote to make a mutable data-structure.
+	(byte-compile-lvarinfo-num-refs, byte-compile-lvarinfo-num-sets):
+	Renamed to use `num-' instead of `num'.
+	(byte-compile-make-lambda-lexenv): Adjusted accordingly.
+
 2004-04-10  Miles Bader  <miles@gnu.org>
 
 	* emacs-lisp/byte-lexbind.el (byte-compile-compute-lforminfo):
